[package]
name = "multi-party-ecdsa"
version = "0.8.1"
edition = "2018"
authors = [
    "Gary <gary@kzencorp.com>",
    "Omer <omer.shlomovits@gmail.com>"
]
keywords = [
    "ecdsa",
    "multi-party-ecdsa",
    "signature",
    "rust",
    "secret-shares",
    "blockchain",
    "cryptography",
    "cryptocurrency"
]

homepage = "https://github.com/KZen-networks/multi-party-ecdsa"
repository = "https://github.com/KZen-networks/multi-party-ecdsa"
license = "GPL-3.0-or-later"
categories = ["cryptography"]

[lib]
crate-type = ["lib"]

[features]
default = ["curv-kzen/rust-gmp-kzen"]
cclst = ["class_group"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
zeroize = "1"
curv-kzen = { version = "0.9", default-features = false }
centipede = { version = "0.3", default-features = false }
zk-paillier = { version = "0.4.3", default-features = false }
round-based = { version = "0.1.4", features = [] }
thiserror = { version = "1.0.23", default-features = false, features = [] }
sha2 = { version = "0.9", default-features = false, features = [] }
sha3 = { version = "0.10", default-features = false, features = [] }
hex = { version = "0.4", default-features = false, features = [] }
tokio = { version = "1", default-features = false, features = ["macros"] }
futures = { version = "0.3", default-features = false, features = [] }
rocket = { version = "0.5.1", default-features = false, features = ["json"] }
serde_json = { version = "1.0", default-features = false }
surf = { version = "2", default-features = false }
async-sse = { version = "5", default-features = false }
anyhow = { version = "1", default-features = false }
structopt = { version = "0.3", default-features = false }
secp256k1 = { version = "0.20", default-features = false, features = ["global-context"] }

[dependencies.paillier]
version = "0.4.2"
package = "kzen-paillier"
default-features = false

[dependencies.class_group]
version = "0.6"
default-features = false
optional = true

[[example]]
name = "http_keygen"
crate-type = ["lib"]

[[example]]
name = "http_signing"
crate-type = ["lib"]


[[bench]]
name = "gg18"
path = "benches/multi_party_ecdsa/gg18/keygen.rs"
harness = false
