[package]
name = "multi-party-ecdsa"
version = "0.8.1"
edition = "2018"
authors = [
    "Gary <gary@kzencorp.com>",
    "Omer <omer.shlomovits@gmail.com>"
]
keywords = [
    "ecdsa",
    "multi-party-ecdsa",
    "signature",
    "rust",
    "secret-shares",
    "blockchain",
    "cryptography",
    "cryptocurrency"
]

homepage = "https://github.com/KZen-networks/multi-party-ecdsa"
repository = "https://github.com/KZen-networks/multi-party-ecdsa"
license = "GPL-3.0-or-later"
categories = ["cryptography"]

[lib]
crate-type = ["lib"]

[features]
default = ["curv-kzen/rust-gmp-kzen"]
cclst = ["class_group"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
zeroize = "1"
curv-kzen = { version = "0.9", default-features = false }
centipede = { version = "0.3", default-features = false }
zk-paillier = { version = "0.4.3", default-features = false }
round-based = { version = "0.1.4", features = [] }
thiserror = "1.0.23"
sha2 = "0.9"
sha3 = "0.10"
rug = "1.27"
hex = "0.4"
tokio = { version = "1", default-features = false, features = ["macros"] }
futures = "0.3"
rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"] }
serde_json = "1.0"
surf = "2"
async-sse = "5"
anyhow = "1"
structopt = "0.3"
secp256k1 = { version = "0.20", features = ["global-context"] }
reqwest = { version = "0.11", features = ["json"] }  # HTTP 客户端

openssl = { version = "0.10", features = ["vendored"] }

[dependencies.gmp-mpfr-sys]
version = "1.6.5"
features = ["force-cross"]

[dependencies.paillier]
version = "0.4.2"
package = "kzen-paillier"
default-features = false

[dependencies.class_group]
version = "0.6"
default-features = false
optional = true


[[bin]]
name = "gg20_keygen"
path = "src/cli/gg20_keygen.rs"

[[bin]]
name = "gg20_signing"
path = "src/cli/gg20_signing.rs"

[[bin]]
name = "gg20_sm_manager"
path = "src/http/gg20_sm_manager.rs"

[[bin]]
name = "gg20_sm_client"
path = "src/cli/gg20_sm_client.rs"

[profile.release]
# Enable static linking for release builds
lto = true
panic = "abort"

